--- a/CoreApp102MVC/appsettings.json
+++ b/CoreApp102MVC/appsettings.json
@@ -1,10 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+
+  "ConnectionStrings": {
+    "SqlConStr": "Data Source=.;Initial Catalog=CoreApp102Db;Persist Security Info=True;User ID=sa;Password=1234;Pooling=False"
+
   },
-  "AllowedHosts": "*"
-}
+  "baseUrl" "https://localhost:5001/api/",
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*"
+  }
