--- a/CoreApp102MVC/appsettings.json
+++ b/CoreApp102MVC/appsettings.json
@@ -4,7 +4,7 @@
     "SqlConStr": "Data Source=.;Initial Catalog=CoreApp102Db;Persist Security Info=True;User ID=sa;Password=1234;Pooling=False"
 
   },
-  "baseUrl" "https://localhost:5001/api/",
+  "baseUrl": "https://localhost:5001/api/",
     "Logging": {
       "LogLevel": {
         "Default": "Information",
